# regridcart

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
conda_recipe/: meta.yaml
notebooks/: examples.ipynb
regridcart/:  coords.py  __init__.py  coords.py  cropping.py  domain.py  interpolation.py
regridcart/interpolation/: common.py
regridcart/interpolation/backends/: common.py  xesmf.py
tests/: test_cflatlon.py  test_regridcart.py
