[metadata]
name = regridcart
version = 0.1.0

[options]
packages=find:
install_requires =
    xarray
    netcdf4
    cartopy
    xesmf

[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
  worldview_dl
  rioxarray
  nbval
  nb-black
lint =
  flake8
  black==21.9b0
dev =
  %(test)s
  %(lint)s
  ipython
