[metadata]
name = regridcart
version = 0.1.1
author = Leif Denby
author_email = leif@denby.eu
description = lat/lon and local-cartesian regridding
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leifdenby/regridcart

[options]
packages=find:
install_requires =
    xarray
    netcdf4
    cartopy
    xesmf>=0.4.0

[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
  worldview_dl
  rioxarray
  nbval
  nb-black
lint =
  flake8
  black==21.9b0
dev =
  %(test)s
  %(lint)s
  ipython

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
    E741 # ambigious name
    C901 # function is too complex
exclude=
    .eggs
    doc
per-file-ignores = __init__.py:F401
# settings for using flake8 with black:
max-line-length = 88
extend-ignore = E203


[pylint.TYPECHECK]
# List of members which are set dynamically and missed by Pylint inference
# system, and so shouldn't trigger E1101 when accessed.
generated-members=numpy.*
good-names=i,j,df,n_*


[isort]
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
known_first_party = convml_data
